[composebox] Fix deep suggestion row height.
We currently manually set the height of realbox matches when in deep
search mode. The omnibox is often large enough where it doesn't need
multiple lines to show deep search suggestions, so manually setting this
height isn't a good solution. Instead, set height based on how many
lines of text there are.

In addition, Line-clamp in css currently does not work because
--webkit-box is deprecated and presubmits don't let you upload cls that
use --webkit-box. To get around this, manually calculate the max text
height for matches in deep search mode and manually truncate text when
it goes beyond the match height.

Before (omnibox): https://screenshot.googleplex.com/9AZoZd6xeppsDFW
After (omnibox): https://screenshot.googleplex.com/nGwjZ485VTh4hWy

Before (realbox): https://screenshot.googleplex.com/AMk6AsNAN4ceiiQ
After (realbox): https://screenshot.googleplex.com/6UPY8bfoEW5LCdZ

(cherry picked from commit cfcfff28bc38507ac9f98f621d668eae6848efff)

Bug: 469447692, 473220685
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/7355501
Commit-Queue: Nihar Majmudar <niharm@google.com>
Cr-Original-Commit-Position: refs/heads/main@{#1563448}
Bypass-Check-License: Merging existing code (with 2025 license) to release branch
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/7386661
Bot-Commit: Rubber Stamper <rubber-stamper@appspot.gserviceaccount.com>
Commit-Queue: Justin Donnelly <jdonnelly@chromium.org>
Cr-Commit-Position: refs/branch-heads/7559@{#2887}
Cr-Branched-From: 223dfbac1c7542a06b422390d954afe5b560b607-refs/heads/main@{#1552494}

--- a/ui/webui/resources/cr_components/composebox/composebox_match.css
+++ b/ui/webui/resources/cr_components/composebox/composebox_match.css
@@ -100,16 +100,20 @@
 }
 
 :host-context([in-deep-search-mode_]) #textContainer {
-  display: block;
-  line-clamp: 2;
   overflow: hidden;
-  box-orient: vertical;
   white-space: normal;
+  line-height: 24px;
 }
 
-:host-context([in-deep-search-mode_]),
+:host-context([in-deep-search-mode_]) {
+  height: auto;
+  min-height: var(--cr-composebox-match-height, 44px);
+}
+
 :host-context([in-deep-search-mode_]) .container {
-  height: 68px;
+  height: auto;
+  min-height: 24px;
+  padding-block: 10px;
 }
 
 :host-context([in-deep-search-mode_]) .container {
